--- a/src/Components/Home/Component1.css
+++ b/src/Components/Home/Component1.css
@@ -1,10 +1,11 @@
 .deshboard-main {
   background-color: #18191d;
-  height: 100vh !important;
+  width: 100%;
+  /* height: 100vh !important; */
 }
 .MainSidebar {
   height: 95vh !important;
-  background: #18191D;
+  background: #18191d;
 }
 .Second-main-Sidebar {
   display: flex;
@@ -25,9 +26,9 @@
 .srting-icons {
   color: #949398;
   font-size: 2.5rem;
-  padding: 1px 4px 0px 4px;
+  padding: 3px 5px 0px 5px;
   border-radius: 50%; /* Make the icons round */
-  transition: background-color 0.3s ease; /* Smooth transition for background color change */
+  background-color: #27282c;
 }
 .srting-icons:hover {
   background: #27282c;
@@ -60,12 +61,15 @@
   margin-right: 1.5rem;
 }
 .Theam-button {
-  /* bottom: 100px; */
-  /* position: fixed; */
+  bottom: 100px;
+  position: absolute;
   display: flex;
   align-items: center;
   margin-top: 10vh;
-  /* gap: 1rem; */
+  gap: 1rem;
+  background: #25262a;
+  padding: 1rem 2rem;
+  border-radius: 10px;
 }
 .Theam-button svg {
   font-size: 3rem;
@@ -83,7 +87,7 @@
   padding-top: 1vh;
   max-height: 38vh !important;
 }
-.Second-right-componet-fix-height{
+.Second-right-componet-fix-height {
   width: 100%;
   padding-top: 1vh;
   height: 30vh;
@@ -108,6 +112,10 @@
 .small-width {
   width: 20px !important;
 }
+.Thomas-button {
+  background-color: #25262a;
+  color: #ffddad;
+}
 /* Component 3  css  */
 .header-section {
   height: 10vh;
@@ -117,7 +125,7 @@
   color: #e6e8eb;
 }
 .center-main {
-  height: 85vh;
+  height: 87vh;
   /* padding: 5vh 5vh 5vh 5vh; */
   margin-bottom: 1rem;
   background-color: #101115;
@@ -169,7 +177,7 @@
   border-radius: 4px;
 }
 .user-profile-icon {
-  color: #56575B;
+  color: #56575b;
   margin-right: 1.5rem;
   margin-top: -3rem !important;
 }
@@ -189,7 +197,8 @@
   margin: 1px 1px 1px 1px;
 }
 .custom-column {
-  width: 30%;
+  width: 32%;
+  gap: 1%;
 }
 
 .custom-container {
@@ -326,21 +335,27 @@
   /* overflow-x: auto; */
   background-color: #28282b;
   border-radius: 10px;
-  max-height: 19vh;
+  max-height: 39vh;
   overflow: auto;
 }
 .table-responsive::-webkit-scrollbar {
   display: none;
 }
-
+.table-dark {
+  margin-left: 1.5rem;
+}
 .table-dark th,
 .table-dark td {
   color: #fff; /* Text color */
   background-color: #28282b; /* Header and cell background color */
   border-color: #454d55;
-  width: 24% !important;
+  width: 20% !important;
 }
-
+.Job-status-button {
+  background-color: #28282b;
+  padding: 2px 5px;
+  border-radius: 5px;
+}
 /**********************donut ring*/
 .donut-ring {
   position: relative;
@@ -400,4 +415,7 @@
   font-size: 1.2rem;
   font-weight: bold;
   color: #000;
+}
+.input-field-3{
+  width: 70%;
 }
