--- a/src/Components/Home/Component1.css
+++ b/src/Components/Home/Component1.css
@@ -54,18 +54,21 @@
 .menu-list li:hover {
   background-color: #ff6054;
   border-radius: 10px;
-  transition: color 10s ease-in !important;
+  transition: background-color 0.3s ease-in-out; /* Added transition for smoother color change */
+}
+
+.menu-list li:hover {
+  color: white; /* Change text color to black on hover */
 }
 .menu-list li svg {
   font-size: 2.5rem;
   margin-right: 1.5rem;
 }
 .Theam-button {
-  bottom: 100px;
+  bottom: 50px;
   position: absolute;
   display: flex;
   align-items: center;
-  margin-top: 10vh;
   gap: 1rem;
   background: #25262a;
   padding: 1rem 2rem;
@@ -189,25 +192,31 @@
   padding: 1.5rem 1px;
 }
 .Instructer-picture img {
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
+  width: 20%;
+  height: 20% !important;
+  border-radius: 50%;
+  gap: 1rem;
 }
 .custom-height-1px {
   margin: 1px 1px 1px 1px;
 }
 .custom-column {
-  width: 32%;
-  gap: 1%;
+  width: 33.3%;
+  margin: 1px 1vh;
 }
 
 .custom-container {
   background-color: #28282b;
+  border-radius: 7px;
 }
-
-.custom-border {
-  border: 1px solid #ccc;
+.component-2-button {
+  border: solid 1px #2f3034;
+  border-radius: 7px;
+  padding: 5px 2rem;
 }
+/* .custom-border {
+  border: 1px solid #15161A;
+} */
 
 .custom-rounded-lg {
   border-radius: 10px;
@@ -230,7 +239,7 @@
 }
 
 .custom-pt-4 {
-  padding-top: 5px;
+  padding-top: 2rem;
 }
 
 .custom-flex-col {
@@ -242,7 +251,7 @@
 }
 
 .custom-pb-10 {
-  padding-bottom: 1rem;
+  padding-bottom: 2.5rem;
 }
 
 .custom-w-24 {
@@ -336,7 +345,8 @@
   background-color: #28282b;
   border-radius: 10px;
   max-height: 39vh;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .table-responsive::-webkit-scrollbar {
   display: none;
@@ -350,10 +360,15 @@
   background-color: #28282b; /* Header and cell background color */
   border-color: #454d55;
   width: 20% !important;
+  border: none !important;
+  padding: 10px 10px;
+}
+.table-dark tbody tr:hover {
+  cursor: pointer;
 }
 .Job-status-button {
   background-color: #28282b;
-  padding: 2px 5px;
+  padding: 5px 5px;
   border-radius: 5px;
 }
 /**********************donut ring*/
@@ -416,6 +431,6 @@
   font-weight: bold;
   color: #000;
 }
-.input-field-3{
+.input-field-3 {
   width: 70%;
 }
