--- a/src/Components/Home/Component1.css
+++ b/src/Components/Home/Component1.css
@@ -4,7 +4,7 @@
   /* height: 100vh !important; */
 }
 .MainSidebar {
-  height: 95vh !important;
+  height: 100vh !important;
   background: #18191d;
 }
 .Second-main-Sidebar {
@@ -65,7 +65,7 @@
   margin-right: 1.5rem;
 }
 .Theam-button {
-  bottom: 50px;
+  bottom: 3.1vh;
   position: absolute;
   display: flex;
   align-items: center;
@@ -121,14 +121,16 @@
 }
 /* Component 3  css  */
 .header-section {
-  height: 10vh;
+  /* height: 10vh; */
   background-color: #18191d;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
+  margin: 4vh 0px 2vh 0px;
   color: #e6e8eb;
 }
 .center-main {
   height: 87vh;
+  border-radius: 5px;
   /* padding: 5vh 5vh 5vh 5vh; */
   margin-bottom: 1rem;
   background-color: #101115;
@@ -162,21 +164,23 @@
   justify-content: space-between;
 }
 .user-profile-image img {
-  width: 50px;
-  height: 50px;
-  border-radius: 10px;
+  width: 45px;
+  height: 45px;
+  border-radius: 8px;
   margin: 2rem 1rem 5px 0px;
 }
 .card-buttons {
   display: flex;
   justify-content: center;
   gap: 2rem;
-  padding-bottom: 1rem;
+  padding-bottom: 1.5rem;
+  margin-top: 1rem;
 }
 .card-buttons button {
-  padding: 0px 5px;
-  font-size: 10px;
-  background: #323035;
+  padding: 6px 15px 4px 15px;
+  /* font-size: 10px; */
+  background: #2A333A;
+  border: none; 
   border-radius: 4px;
 }
 .user-profile-icon {
@@ -202,7 +206,7 @@
 }
 .custom-column {
   width: 33.3%;
-  margin: 1px 1vh;
+  /* margin: 1px 1vh; */
 }
 
 .custom-container {
@@ -210,7 +214,7 @@
   border-radius: 7px;
 }
 .component-2-button {
-  border: solid 1px #2f3034;
+  border: solid 3px #313336;
   border-radius: 7px;
   padding: 5px 2rem;
 }
@@ -292,12 +296,12 @@
 
 .custom-text-gray-400 {
   color: #ccc;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 2rem;
 }
 
 .custom-mt-4 {
   margin-top: 1rem;
+  justify-content: center;
 }
 
 .custom-inline-flex {
@@ -353,6 +357,7 @@
 }
 .table-dark {
   margin-left: 1.5rem;
+  width: 98%;
 }
 .table-dark th,
 .table-dark td {
@@ -363,14 +368,19 @@
   border: none !important;
   padding: 10px 10px;
 }
+.table-dark tbody tr{
+  margin-top: 2rem !important;
+}
 .table-dark tbody tr:hover {
   cursor: pointer;
   /* background-color: #28282b; */
   background-color: #333438;
 }
 .Job-status-button {
-  background-color: #28282b;
-  padding: 5px 5px;
+  /* background-color: #28282b; */
+  /* background-color: #2A333A; */
+  width: 9rem;
+  padding: 5px 1px 1px 1px ;
   border-radius: 5px;
 }
 /**********************donut ring*/
@@ -436,3 +446,4 @@
 .input-field-3 {
   width: 70%;
 }
+
