--- a/src/Components/Home/Component1.css
+++ b/src/Components/Home/Component1.css
@@ -1,10 +1,10 @@
 .deshboard-main {
   background-color: #18191d;
   width: 100%;
-  /* height: 100vh !important; */
+  height: auto !important;
 }
 .MainSidebar {
-  height: 95vh !important;
+  height: 100vh !important;
   background: #18191d;
 }
 .Second-main-Sidebar {
